# lavsurgut.github.io

./: README.md  pelicanconf.py  publishconf.py  pyproject.toml
content/: first_post.md  second_post.md
content/pages/: about.md
docs/: archives.html  authors.html  categories.html  index.html  my-first-post.html  python-and-rust-for-data-engineering.html  second-post.html  tags.html
docs/author/: valery-lavrentiev.html
docs/category/: first-post.html  second-post.html
docs/pages/: about-me.html
output/: archives.html  authors.html  categories.html  index.html  tags.html
tests/: test_lavblog.py
theme/templates/: about.html  base.html  index.html
