[tool.poetry]
name = "lavblog"
version = "0.1.0"
description = ""
authors = ["Valery Lavrentiev <lavsurgut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
asciidoc3 = "^3.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
