[tool.poetry]
name = "lavblog"
version = "0.1.0"
description = ""
authors = ["Valery Lavrentiev <lavsurgut@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.8.0"}

[tool.poetry.dev-dependencies]
pelican = "^4.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
